Скорректирована разметка главной страницы, добавлена разметка страницы "Гостиницы"

--- a/index.html
+++ b/index.html
@@ -8,62 +8,74 @@
     <header class="main-header">
         <nav class="nav-header">
           <a class="nav-header-logo">
-        <img src="#" width="100" height="100" alt="Логотип Седона">
-        </a>
+           <img src="#" width="100" height="100" alt="Логотип Седона">
+          </a>
           <ul>
             <li><a href="info.html">Информация</a></li>
-              <li><a href="media.html">Фото и видео</a></li>
-                <li><a href="map.html">Карта штата</a></li>
-                  <li><a href="catalog.html">Гостиницы</a></li>
-                  </ul>
+            <li><a href="media.html">Фото и видео</a></li>
+            <li><a href="map.html">Карта штата</a></li>
+            <li><a href="catalog.html">Гостиницы</a></li>
+          </ul>
         </nav>
-          </header>
-          <main class="main-container">
-            <section class="features">
-  <h2 class="features-main">Седона - небольшой городок в аризоне, заслуживающий большего!</h2>
-  <p class="features-reasons">Рассмотрим 5 причин, по которым Седона курче чем Гранд Каньон!</p>
-  <ul class="features-list">
-  <li><h4 class="features-name"> Настоящий городок</h4>
-    <p class="features-number"> - №1 - </p>
-  <p class="features-description>">Седона не аттракцион для туристов, там течет своя жизнь</p>
-  </li>
-  <li class="features-list-extra">
-  <h4 class="features-name">Жилье</h4>
-  <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p> </li>
-  <li><h4 class="features-name">Еда</h4>
-  <p class="features-description">Всегда заказывай фирменный бургер, вы не разочаруетесь!</p></li>
-  <li><h4 class="features-name">Сувениры</h4>
-  <p class="features-description">Не только китайского, но и местного производства!</p></li>
-  <li><h4 class="features-name">Там есть <br> мост дьявола</h4>
-    <p class="features-number"> - №2 - </p>
-  <p class="features-description>">Да, по нему можно пройти! Если конечно вы осмелитесь</p> </li>
-  <li class="features-list-wide">
-  <h4 class="features-name">Небольшая площадь</h4>
-    <p class="features-number"> - №3 - </p>
-  <p class="features-description>">Все достопримечательности находятся очень близко</p></li>
-  <li class="features-list-wide">
-  <h4 class="features-name">Красивая дорога</h4>
-    <p class="features-number"> - №4 - </p>
-  <p class="features-description>">Ехать в седону из лас-вегаса совсем не скучно!</p></li>
-  <li class="features-list-wide">
-  <h4 class="features-name">Мало туристов</h4>
-    <p class="features-number"> - №5 - </p>
-  <p class="features-description>">Большинство едет в Гранд Каньон и толпится там</p></li></ul>
-  </section>
-  <section class="offers">
-  <h2 class="main-question">Заинтересовались?</h2>
-  <p class="main-offer">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-  <a class="main-search">Поиск гостиницы в Седоне</a>
-  <p class="main-button-date"> Дата заезда </p>
-  <p class="main-button-date">Дата выезда</p>
-  <p class="main-button-adults">Взрослые</p>
-  <p class="main-button-childrens">Дети</p>
-  <p class="main-button-search">Найти</p>
-  </section>
-  </main>
-            <footer class="main-footer">
-              <p class="hashtag-footer">#VISITSEDONA </p>
-            <div class="social-footer">
+    </header>
+    <main class="main-container">
+        <section class="features">
+          <h2 class="features-main">Седона - небольшой городок в аризоне, заслуживающий большего!</h2>
+          <p class="features-reasons">Рассмотрим 5 причин, по которым Седона курче чем Гранд Каньон!</p>
+          <ul class="features-list">
+            <li><h3 class="features-name"> Настоящий городок</h3>
+              <p class="features-number"> - №1 - </p>
+              <p class="features-description>">Седона не аттракцион для туристов, там течет своя жизнь</p>
+               <ul>
+                 <li class="features-list-extra">
+                   <h4 class="features-name">Жилье</h4>
+                   <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p> </li>
+                 <li class="features-list-extra"><h4 class="features-name">Еда</h4>
+                   <p class="features-description">Всегда заказывай фирменный бургер, вы не разочаруетесь!</p></li>
+                 <li class="features-list-extra"><h4 class="features-name">Сувениры</h4>
+                   <p class="features-description">Не только китайского, но и местного производства!</p></li>
+               </ul></li>
+            <li><h3 class="features-name">Там есть <br> мост дьявола</h3>
+              <p class="features-number"> - №2 - </p>
+              <p class="features-description>">Да, по нему можно пройти! Если конечно вы осмелитесь</p> </li>
+            <li class="features-list-wide">
+              <h3 class="features-name">Небольшая площадь</h3>
+              <p class="features-number"> - №3 - </p>
+              <p class="features-description>">Все достопримечательности находятся очень близко</p></li>
+            <li class="features-list-wide">
+              <h3 class="features-name">Красивая дорога</h3>
+              <p class="features-number"> - №4 - </p>
+              <p class="features-description>">Ехать в седону из лас-вегаса совсем не скучно!</p></li>
+            <li class="features-list-wide">
+              <h3 class="features-name">Мало туристов</h3>
+              <p class="features-number"> - №5 - </p>
+              <p class="features-description>">Большинство едет в Гранд Каньон и толпится там</p></li>
+          </ul>
+        </section>
+        <section class="offers">
+          <h2 class="main-question">Заинтересовались?</h2>
+          <p class="main-offer">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="main-search" href="#">Поиск гостиницы в Седоне</a>
+          <form>
+            <p class="main-button-date">Дата заезда<input type="date" name="date-from"></p>
+          </form>
+          <form>
+            <p class="main-button-date">Дата выезда<input type="date" name="date-to"></p>
+          </form>
+          <form>
+            <p class="main-button-adults">Взрослые<input type="number" name="number-adults" min="1" max="10" value="1"></p>
+          </form>
+          <form>
+            <p class="main-button-childrens">Дети<input type="number" name="number-childrens" min="0" max="10" value="0"></p>
+          </form>
+          <form action="#">
+            <p class="main-button-search"><input type="submit" value="Найти"></p>
+          </form>
+        </section>
+    </main>
+    <footer class="main-footer">
+        <p class="hashtag-footer">#VISITSEDONA</p>
+        <div class="social-footer">
           <ul>
             <li><a class="social-button" href="#">Твитер</a></li>
             <li><a class="social-button" href="#">Фейсбук</a></li>
@@ -72,7 +84,8 @@
         </div>
         <p class="copyright-footer">
           <b>Разработано:</b>
-               <a class="button-footer" href="https://htmlacademy.ru">HTML Academy</a>
-          </footer>
+          <a class="button-footer" href="https://htmlacademy.ru">HTML Academy</a>
+        </p>
+    </footer>
   </body>
 </html>
