Внесены корректировки в разметку Главной страницы и страницы "Гостиницы"
1) Убраны формы из разметки страницы "Гостиницы";
2) Закомментированы формы на главной странице;
3) Там, где на главной странице текст "Заинтерисовались", шрифт изменен с <h2> на <strong>.

--- a/catalog.html
+++ b/catalog.html
@@ -26,34 +26,25 @@
               <p class="hotel-price">От 4000 р.</p>
               <p class="hotel-rating">Рейтинг:8,5</p>
               <p class="hidden-text">Количество звезд</p>
-              <form action="#">
-                <p class="main-button-about"><input type="submit" value="Подробнее"></p>
-              </form>
-              <form action="#">
-                <p class="main-button-reserve"><input type="submit" value="Забронировать"></p>
-              </form></li>
+              <p class="main-button-about"><a href="#">Подробнее</a></p>
+              <p class="main-button-reserve"><a href="#">Забронировать</a></p>
+            </li>
             <li><h2 class="hotel-name">Desert Quail Inn</h2>
               <p class="hotel-type">Мотель</p>
               <p class="hotel-price">От 3000 р.</p>
               <p class="hotel-rating">Рейтинг:8,9</p>
               <p class="hidden-text">Количество звезд</p>
-              <form action="#">
-                <p class="main-button-about"><input type="submit" value="Подробнее"></p>
-              </form>
-              <form action="#">
-                <p class="main-button-reserve"><input type="submit" value="Забронировать"></p>
-              </form></li>
+              <p class="main-button-about"><a href="#">Подробнее</a></p>
+              <p class="main-button-reserve"><a href="#">Забронировать</a></p>
+            </li>
             <li><h2 class="hotel-name">Villas at Poco Diablo</h2>
               <p class="hotel-type">Апартаменты</p>
               <p class="hotel-price">От 2000 р.</p>
               <p class="hotel-rating">Рейтинг:9,2</p>
               <p class="hidden-text">Количество звезд</p>
-              <form action="#">
-                <p class="main-button-about"><input type="submit" value="Подробнее"></p>
-              </form>
-              <form action="#">
-                <p class="main-button-reserve"><input type="submit" value="Забронировать"></p>
-              </form></li>
+              <p class="main-button-about"><a href="#">Подробнее</a></p>
+              <p class="main-button-reserve"><a href="#">Забронировать</a></p>
+            </li>
           </ul>
         </section>
     </main>
