--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
           </ul>
         </section>
         <section class="offers">
-          <h2 class="main-question">Заинтересовались?</h2>
+          <strong class="main-question">Заинтересовались?</strong>
           <p class="main-offer">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="main-search" href="#">Поиск гостиницы в Седоне</a>
+<!--
           <form>
             <p class="main-button-date">Дата заезда<input type="date" name="date-from"></p>
           </form>
@@ -71,6 +72,7 @@
           <form action="#">
             <p class="main-button-search"><input type="submit" value="Найти"></p>
           </form>
+-->
         </section>
     </main>
     <footer class="main-footer">
