--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
         <nav class="nav-header">
           <a class="nav-header-logo" href="index.html">
-           <img src="#" width="100" height="100" alt="Логотип Седона">
+           <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седона">
           </a>
           <ul>
             <li><a href="info.html">Информация</a></li>
@@ -19,6 +19,7 @@
         </nav>
     </header>
     <main class="main-container">
+      <!--  <img class="catalog-background" src="img/catalog-background.jpg" width="1200px" height="562px" alt="Обои"> -->
         <section class="main-hotel">
           <ul class="hotel-list">
             <li><h2 class="hotel-name">Amara resort & Spa</h2>
@@ -26,6 +27,11 @@
               <p class="hotel-price">От 4000 р.</p>
               <p class="hotel-rating">Рейтинг:8,5</p>
               <p class="hidden-text">Количество звезд</p>
+              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
+              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
+              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
+              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
+              <img class="catalog-photo" src="img/catalog-amara.jpg" width="135px" height="90px" alt="Amara Resort">
               <p class="main-button-about"><a href="#">Подробнее</a></p>
               <p class="main-button-reserve"><a href="#">Забронировать</a></p>
             </li>
@@ -34,6 +40,10 @@
               <p class="hotel-price">От 3000 р.</p>
               <p class="hotel-rating">Рейтинг:8,9</p>
               <p class="hidden-text">Количество звезд</p>
+              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
+              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
+              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
+              <img class="catalog-photo" src="img/catalog-desert.jpg" width="135px" height="90px" alt="Desert Quail">
               <p class="main-button-about"><a href="#">Подробнее</a></p>
               <p class="main-button-reserve"><a href="#">Забронировать</a></p>
             </li>
@@ -42,6 +52,9 @@
               <p class="hotel-price">От 2000 р.</p>
               <p class="hotel-rating">Рейтинг:9,2</p>
               <p class="hidden-text">Количество звезд</p>
+              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
+              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
+              <img src="img/catalog-villas.jpg" width="135px" height="90px" alt="Villas at Poco">
               <p class="main-button-about"><a href="#">Подробнее</a></p>
               <p class="main-button-reserve"><a href="#">Забронировать</a></p>
             </li>
@@ -52,14 +65,14 @@
             <p class="hashtag-footer">#VISITSEDONA</p>
             <div class="social-footer">
               <ul>
-                <li><a class="social-button" href="#">Твитер</a></li>
-                <li><a class="social-button" href="#">Фейсбук</a></li>
-                <li><a class="social-button" href="#">Ютуб</a></li>
+                <li><a class="social-button" href="#"><img src="img/icon-twitter.svg" width="17" height="15" alt="Иконка-Твиттер"></a></li>
+                <li><a class="social-button" href="#"><img src="img/icon-facebook.svg" width="17" height="15" alt="Иконка-Фейсбук"></a></li>
+                <li><a class="social-button" href="#"><img src="img/icon-youtube.svg" width="17" height="15" alt="Иконка-Ютуб"></a></li>
               </ul>
             </div>
             <p class="copyright-footer">
               <b>Разработано:</b>
-              <a class="button-footer" href="https://htmlacademy.ru">HTML Academy</a>
+              <a class="button-footer" href="https://htmlacademy.ru"><img src="img/logo-academy.svg" width="115px" height="41px" alt="Html Academy"></a>
             </p>
         </footer>
   </body>
