--- a/index.html
+++ b/index.html
@@ -1,62 +1,89 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
-    <header class="main-header">
-        <nav class="nav-header">
-          <a class="nav-header-logo">
-           <img src="#" width="100" height="100" alt="Логотип Седона">
-          </a>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
+
+<body>
+  <header class="main-header">
+    <nav class="nav-header">
+      <a class="nav-header-logo">
+        <img src="img/logo-sedona.svg" width="140" height="71" alt="Логотип Седона">
+      </a>
+      <ul>
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="media.html">Фото и видео</a></li>
+        <li><a href="map.html">Карта штата</a></li>
+        <li><a href="catalog.html">Гостиницы</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main class="main-container">
+  <!--  <img class="main-background" src="img/main-backgroundphoto.jpg" width="1200px" height="773px" alt="Обои">
+    <img class="main-welcometext" src="img/main-welcometext.jpg" width="459px" height="353px" alt="Обои"> -->
+    <section class="features">
+      <h2 class="features-main">Седона - небольшой городок в аризоне, заслуживающий большего!</h2>
+      <p class="features-reasons">Рассмотрим 5 причин, по которым Седона курче чем Гранд Каньон!</p>
+      <ul class="features-list">
+        <li>
+          <img class="main-picture-feature" src="img/main-reason1.jpg" width="800px" height="256px" alt="Фотография-причина1">
+          <h3 class="features-name"> Настоящий городок</h3>
+          <p class="features-number"> - №1 - </p>
+          <p class="features-description>">Седона не аттракцион для туристов, там течет своя жизнь</p>
           <ul>
-            <li><a href="info.html">Информация</a></li>
-            <li><a href="media.html">Фото и видео</a></li>
-            <li><a href="map.html">Карта штата</a></li>
-            <li><a href="catalog.html">Гостиницы</a></li>
+            <li class="features-list-extra">
+              <img class="main-icon" src="img/icon-house.svg" width="75" height="72" alt="Иконка-дом">
+              <h4 class="features-name">Жилье</h4>
+              <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+            </li>
+            <li class="features-list-extra">
+              <img class="main-icon" src="img/icon-food.svg" width="75" height="72" alt="Иконка-еда">
+              <h4 class="features-name">Еда</h4>
+              <p class="features-description">Всегда заказывай фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="features-list-extra">
+              <img class="main-icon" src="img/icon-souvenir.svg" width="75" height="72" alt="Иконка-сувенир">
+              <h4 class="features-name">Сувениры</h4>
+              <p class="features-description">Не только китайского, но и местного производства!</p>
+            </li>
           </ul>
-        </nav>
-    </header>
-    <main class="main-container">
-        <section class="features">
-          <h2 class="features-main">Седона - небольшой городок в аризоне, заслуживающий большего!</h2>
-          <p class="features-reasons">Рассмотрим 5 причин, по которым Седона курче чем Гранд Каньон!</p>
-          <ul class="features-list">
-            <li><h3 class="features-name"> Настоящий городок</h3>
-              <p class="features-number"> - №1 - </p>
-              <p class="features-description>">Седона не аттракцион для туристов, там течет своя жизнь</p>
-               <ul>
-                 <li class="features-list-extra">
-                   <h4 class="features-name">Жилье</h4>
-                   <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p> </li>
-                 <li class="features-list-extra"><h4 class="features-name">Еда</h4>
-                   <p class="features-description">Всегда заказывай фирменный бургер, вы не разочаруетесь!</p></li>
-                 <li class="features-list-extra"><h4 class="features-name">Сувениры</h4>
-                   <p class="features-description">Не только китайского, но и местного производства!</p></li>
-               </ul></li>
-            <li><h3 class="features-name">Там есть <br> мост дьявола</h3>
-              <p class="features-number"> - №2 - </p>
-              <p class="features-description>">Да, по нему можно пройти! Если конечно вы осмелитесь</p> </li>
-            <li class="features-list-wide">
-              <h3 class="features-name">Небольшая площадь</h3>
-              <p class="features-number"> - №3 - </p>
-              <p class="features-description>">Все достопримечательности находятся очень близко</p></li>
-            <li class="features-list-wide">
-              <h3 class="features-name">Красивая дорога</h3>
-              <p class="features-number"> - №4 - </p>
-              <p class="features-description>">Ехать в седону из лас-вегаса совсем не скучно!</p></li>
-            <li class="features-list-wide">
-              <h3 class="features-name">Мало туристов</h3>
-              <p class="features-number"> - №5 - </p>
-              <p class="features-description>">Большинство едет в Гранд Каньон и толпится там</p></li>
-          </ul>
-        </section>
-        <section class="offers">
-          <strong class="main-question">Заинтересовались?</strong>
-          <p class="main-offer">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="main-search" href="#">Поиск гостиницы в Седоне</a>
-<!--
+        </li>
+        <li>
+          <img class="main-picture-feature" src="img/main-reason2.jpg" width="800px" height="256px" alt="Фотография-причина2">
+          <h3 class="features-name">Там есть <br> мост дьявола</h3>
+          <p class="features-number"> - №2 - </p>
+          <p class="features-description>">Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+        </li>
+        <li class="features-list-wide">
+          <h3 class="features-name">Небольшая площадь</h3>
+          <p class="features-number"> - №3 - </p>
+          <p class="features-description>">Все достопримечательности находятся очень близко</p>
+        </li>
+        <li class="features-list-wide">
+          <h3 class="features-name">Красивая дорога</h3>
+          <p class="features-number"> - №4 - </p>
+          <p class="features-description>">Ехать в седону из лас-вегаса совсем не скучно!</p>
+        </li>
+        <li class="features-list-wide">
+          <h3 class="features-name">Мало туристов</h3>
+          <p class="features-number"> - №5 - </p>
+          <p class="features-description>">Большинство едет в Гранд Каньон и толпится там</p>
+        </li>
+      </ul>
+    </section>
+    <section class="offers">
+      <strong class="main-question">Заинтересовались?</strong>
+      <p class="main-offer">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <a class="main-search" href="#">Поиск гостиницы в Седоне</a>
+      <img class="main-calendar" src="img/main-calendar.svg" width="21" height="22" alt="Иконка-календарь">
+      <img class="main-calendar" src="img/main-calendar.svg" width="21" height="22" alt="Иконка-календарь">
+      <img class="main-minus" src="img/icon-minus.svg" width="11" height="11" alt="Иконка-минус">
+      <img class="main-plus" src="img/icon-plus.svg" width="11" height="11" alt="Иконка-плюс">
+      <img class="main-minus" src="img/icon-minus.svg" width="11" height="11" alt="Иконка-минус">
+      <img class="main-plus" src="img/icon-plus.svg" width="11" height="11" alt="Иконка-плюс">
+      <!--
           <form>
             <p class="main-button-date">Дата заезда<input type="date" name="date-from"></p>
           </form>
@@ -73,21 +100,22 @@
             <p class="main-button-search"><input type="submit" value="Найти"></p>
           </form>
 -->
-        </section>
-    </main>
-    <footer class="main-footer">
-        <p class="hashtag-footer">#VISITSEDONA</p>
-        <div class="social-footer">
-          <ul>
-            <li><a class="social-button" href="#">Твитер</a></li>
-            <li><a class="social-button" href="#">Фейсбук</a></li>
-            <li><a class="social-button" href="#">Ютуб</a></li>
-          </ul>
-        </div>
-        <p class="copyright-footer">
-          <b>Разработано:</b>
-          <a class="button-footer" href="https://htmlacademy.ru">HTML Academy</a>
-        </p>
-    </footer>
-  </body>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <p class="hashtag-footer">#VISITSEDONA</p>
+    <div class="social-footer">
+      <ul>
+        <li><a class="social-button" href="#"><img src="img/icon-twitter.svg" width="17" height="15" alt="Иконка-Твиттер"></a></li>
+        <li><a class="social-button" href="#"><img src="img/icon-facebook.svg" width="17" height="15" alt="Иконка-Фейсбук"></a></li>
+        <li><a class="social-button" href="#"><img src="img/icon-youtube.svg" width="17" height="15" alt="Иконка-Ютуб"></a></li>
+      </ul>
+    </div>
+    <p class="copyright-footer">
+      <b>Разработано:</b>
+      <a class="button-footer" href="https://htmlacademy.ru"><img src="img/logo-academy.svg" width="115px" height="41px" alt="Html Academy"></a>
+    </p>
+  </footer>
+</body>
+
 </html>
