Убрана лишняя графика (иконки) из разметки

--- a/index.html
+++ b/index.html
@@ -34,17 +34,14 @@
           <p class="features-description>">Седона не аттракцион для туристов, там течет своя жизнь</p>
           <ul>
             <li class="features-list-extra">
-              <img class="main-icon" src="img/icon-house.svg" width="75" height="72" alt="Иконка-дом">
               <h4 class="features-name">Жилье</h4>
               <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
             </li>
             <li class="features-list-extra">
-              <img class="main-icon" src="img/icon-food.svg" width="75" height="72" alt="Иконка-еда">
               <h4 class="features-name">Еда</h4>
               <p class="features-description">Всегда заказывай фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="features-list-extra">
-              <img class="main-icon" src="img/icon-souvenir.svg" width="75" height="72" alt="Иконка-сувенир">
               <h4 class="features-name">Сувениры</h4>
               <p class="features-description">Не только китайского, но и местного производства!</p>
             </li>
@@ -79,10 +76,6 @@
       <a class="main-search" href="#">Поиск гостиницы в Седоне</a>
       <img class="main-calendar" src="img/main-calendar.svg" width="21" height="22" alt="Иконка-календарь">
       <img class="main-calendar" src="img/main-calendar.svg" width="21" height="22" alt="Иконка-календарь">
-      <img class="main-minus" src="img/icon-minus.svg" width="11" height="11" alt="Иконка-минус">
-      <img class="main-plus" src="img/icon-plus.svg" width="11" height="11" alt="Иконка-плюс">
-      <img class="main-minus" src="img/icon-minus.svg" width="11" height="11" alt="Иконка-минус">
-      <img class="main-plus" src="img/icon-plus.svg" width="11" height="11" alt="Иконка-плюс">
       <!--
           <form>
             <p class="main-button-date">Дата заезда<input type="date" name="date-from"></p>
@@ -106,9 +99,9 @@
     <p class="hashtag-footer">#VISITSEDONA</p>
     <div class="social-footer">
       <ul>
-        <li><a class="social-button" href="#"><img src="img/icon-twitter.svg" width="17" height="15" alt="Иконка-Твиттер"></a></li>
-        <li><a class="social-button" href="#"><img src="img/icon-facebook.svg" width="17" height="15" alt="Иконка-Фейсбук"></a></li>
-        <li><a class="social-button" href="#"><img src="img/icon-youtube.svg" width="17" height="15" alt="Иконка-Ютуб"></a></li>
+        <li><a class="social-button" href="#">Twitter</a></li>
+        <li><a class="social-button" href="#">Facebook</a></li>
+        <li><a class="social-button" href="#">Youtube</a></li>
       </ul>
     </div>
     <p class="copyright-footer">
