--- a/catalog.html
+++ b/catalog.html
@@ -27,10 +27,6 @@
               <p class="hotel-price">От 4000 р.</p>
               <p class="hotel-rating">Рейтинг:8,5</p>
               <p class="hidden-text">Количество звезд</p>
-              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
-              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
-              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
-              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
               <img class="catalog-photo" src="img/catalog-amara.jpg" width="135px" height="90px" alt="Amara Resort">
               <p class="main-button-about"><a href="#">Подробнее</a></p>
               <p class="main-button-reserve"><a href="#">Забронировать</a></p>
@@ -40,9 +36,6 @@
               <p class="hotel-price">От 3000 р.</p>
               <p class="hotel-rating">Рейтинг:8,9</p>
               <p class="hidden-text">Количество звезд</p>
-              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
-              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
-              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
               <img class="catalog-photo" src="img/catalog-desert.jpg" width="135px" height="90px" alt="Desert Quail">
               <p class="main-button-about"><a href="#">Подробнее</a></p>
               <p class="main-button-reserve"><a href="#">Забронировать</a></p>
@@ -52,8 +45,6 @@
               <p class="hotel-price">От 2000 р.</p>
               <p class="hotel-rating">Рейтинг:9,2</p>
               <p class="hidden-text">Количество звезд</p>
-              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
-              <img class="catalog-star" src="img/catalog-star.svg" width="18px" height="17px" alt=" Звезды">
               <img src="img/catalog-villas.jpg" width="135px" height="90px" alt="Villas at Poco">
               <p class="main-button-about"><a href="#">Подробнее</a></p>
               <p class="main-button-reserve"><a href="#">Забронировать</a></p>
@@ -65,9 +56,9 @@
             <p class="hashtag-footer">#VISITSEDONA</p>
             <div class="social-footer">
               <ul>
-                <li><a class="social-button" href="#"><img src="img/icon-twitter.svg" width="17" height="15" alt="Иконка-Твиттер"></a></li>
-                <li><a class="social-button" href="#"><img src="img/icon-facebook.svg" width="17" height="15" alt="Иконка-Фейсбук"></a></li>
-                <li><a class="social-button" href="#"><img src="img/icon-youtube.svg" width="17" height="15" alt="Иконка-Ютуб"></a></li>
+                <li><a class="social-button" href="#">Twitter</a></li>
+                <li><a class="social-button" href="#">Facebook</a></li>
+                <li><a class="social-button" href="#">Youtube</a></li>
               </ul>
             </div>
             <p class="copyright-footer">
