--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
               <p class="hotel-rating">Рейтинг:8,5</p>
               <p class="hidden-text">Количество звезд</p>
               <img class="catalog-photo" src="img/catalog-amara.jpg" width="135px" height="90px" alt="Amara Resort">
-              <a class="main-button-about"><a href="#">Подробнее</a></p><!--Сделала ссылкой, так как переходим на другую страницу -->
+              <p class="main-button-about"><a href="#">Подробнее</a></p><!--Сделала ссылкой, так как переходим на другую страницу -->
               <p class="main-button-reserve"><a href="#">Забронировать</a></p><!--Сделала ссылкой, так как переходим на другую страницу -->
             </li>
             <li><h2 class="hotel-name">Desert Quail Inn</h2>
@@ -61,13 +61,13 @@
             <div class="social-footer">
               <ul>
                 <li>
-                  <a class="social-button" href="#" aria-label="Ссылка на Твиттер">Twitter</a>
+                  <a class="social-button" href="#" aria-label="Ссылка на Твиттер"></a>
                 </li>
                 <li>
-                  <a class="social-button" href="#" aria-label="Ссылка на Фейсбук">Facebook</a>
+                  <a class="social-button" href="#" aria-label="Ссылка на Фейсбук"></a>
                 </li>
                 <li>
-                  <a class="social-button" href="#" aria-label="Ссылка на Ютуб">Youtube</a>
+                  <a class="social-button" href="#" aria-label="Ссылка на Ютуб"></a>
                 </li>
               </ul>
             </div>
