--- a/index.html
+++ b/index.html
@@ -79,22 +79,24 @@
          <p class="search-criteria">
            <label for="search-datefrom">Дата заезда</label>
            <input id="search-datefrom" type="date" name="datefrom" value="">
-           <img class="main-calendar" src="img/main-calendar.svg" width="21" height="22" alt="Иконка-календарь">
          </p>
          <p class="search-criteria">
            <label for="seacrh-dateto">Дата выезда</label>
            <input id="search-dateto" type="date" name="dateto" value="">
-           <img class="main-calendar" src="img/main-calendar.svg" width="21" height="22" alt="Иконка-календарь">
          </p>
          <p class="search-criteria">
            <label for="search-adults">Взрослые</label>
+           <button class="search-minus" type="submit">-</button>
            <input id="search-adults" type="number" name="adults" value="" placeholder="1" min="1">
+           <button class="search-plus" type="submit">+</button>
          </p>
          <p class="search-criteria">
            <label for="search-children">Дети</label>
+           <button class="search-minus" type="submit">-</button>
            <input id="search-children" type="number" name="children" value="" placeholder="0">
+           <button class="search-plus" type="submit">+</button>
          </p>
-         <a href="catalog.html">Найти</a> <!--Сделала ссылкой, так как переходим на другую страницу -->
+         <button class="main-buttonsearch" type="submit">Найти</button>
        </form>
     </section>
     <h2 class="visially-hidden"> Карта Седоны </h2>
@@ -105,13 +107,13 @@
     <div class="social-footer">
       <ul>
         <li>
-          <a class="social-button" href="#" aria-label="Ссылка на Твиттер">Twitter</a>
+          <a class="social-button" href="#" aria-label="Ссылка на Твиттер"></a>
         </li>
         <li>
-          <a class="social-button" href="#" aria-label="Ссылка на Фейсбук">Facebook</a>
+          <a class="social-button" href="#" aria-label="Ссылка на Фейсбук"></a>
         </li>
         <li>
-          <a class="social-button" href="#" aria-label="Ссылка на Ютуб">Youtube</a>
+          <a class="social-button" href="#" aria-label="Ссылка на Ютуб"></a>
         </li>
       </ul>
     </div>
