--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
         <li><a href="catalog.html">Гостиницы</a></li>
       </ul>
     </nav>
+  </div>
   </header>
   <main class="main-container">
-  <!--  <img class="main-background" src="img/main-backgroundphoto.jpg" width="1200px" height="773px" alt="Обои">
-    <img class="main-welcometext" src="img/main-welcometext.jpg" width="459px" height="353px" alt="Обои"> -->
+  <img class="main-background" src="img/main-backgroundphoto.jpg" width="1200px" height="773px" alt="Обои">
+    <img class="main-welcometext" src="img/main-welcometext.png" width="459px" height="353px" alt="Обои">
     <section class="features">
+      <div class="features-text">
       <h2 class="features-main">Седона - небольшой городок в аризоне,<br> заслуживающий большего!</h2>
-      <p class="features-reasons">Рассмотрим 5 причин, по которым Седона курче чем Гранд Каньон!</p>
+      <p class="features-reasons">Рассмотрим 5 причин, по которым Седона курче чем Гранд Каньон!</p></div>
       <h2 class="visially-hidden"> 5 причин посетить Седону </h2>
       <ul class="features-list">
        <div class="white-block">
@@ -128,7 +130,7 @@
     </div>
     <p class="copyright-footer">
       <b>Разработано:</b>
-      <a class="button-footer" href="https://htmlacademy.ru" aria-label="Ссылка на Академию"><img src="img/logo-academy.svg" width="115px" height="41px" alt="Html Academy"></a>
+      <a class="button-footer" href="https://htmlacademy.ru" aria-label="Ссылка на Академию"><img src="img/logo-academy.svg" width="115px" height="41px" alt="Html Academy"></a> -->
   </footer>
 </body>
 </html>
